--- a/mamar_bank/transactions/templates/transactions/transaction_form.html
+++ b/mamar_bank/transactions/templates/transactions/transaction_form.html
@@ -10,6 +10,18 @@
         <form method="post" class="px-8 pt-6 pb-8 mb-4">
             {% csrf_token %}
 
+            {% if title == 'Transfer Money' %}
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="recipient_account">
+                    Recipient Account
+                </label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight border rounded-md border-gray-500 focus:outline-none focus:shadow-outline" name="recipient_account" id="recipient_account" type="number" required placeholder="Recipient Account Number">
+            </div>
+            {% if form.recipient_account.errors %} {% for error in form.recipient_account.errors %}
+            <p class="text-red-600 text-sm italic pb-2">{{ error }}</p>
+            {% endfor %} {% endif %}
+            {% endif %}
+            
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="amount">
                     Amount
